1. macOS version is released, now everything including documents, ideas and attachments will all be synced across iPhone, iPad and macOS version

2. Fix some issues