@@ -19,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>191</string>
+	<string>197</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
