@@ -172,8 +172,8 @@
             
             
               <div class="app-url-descr">
-                marketing_url: <a target="_blank" class="app-url" href="https://forum.x3note.site/
-">https://forum.x3note.site/
+                marketing_url: <a target="_blank" class="app-url" href="https://forum.x3note.site/t/welcome-to-x3-note/47
+">https://forum.x3note.site/t/welcome-to-x3-note/47
 </a>
               </div>
             
@@ -223,7 +223,7 @@
           <div class="app-description">
                <div class="cat-headline">Description</div>
                <div class="app-description-text">
-                  Some people are different, they are curious, creative, always have fresh ideas, they don't think like others do, they don't see the world the same way as everybody does, they can feel what other people can't, to them the world is bigger, the sky is deeper, there are so much for them to explore, to share to others, to help people with their remarkable works, show them what the world can be, and how colorful life can be, they change the world for the better, you might be one of them.<br /><br />X3 is a note, which combines note taking, planning, and idea capturing together, with a mark-up syntax text based editor, supports various types of attachments, folding/unfoding paragraphs; use status, date and time to track tasks directly from text, and share anything that can be added as attachment from any app to X3 as editing resource.<br /><br />* Editor<br />- Minimal design let you focusing on writing.<br />- Lightweight markup launguage based rich text editor, supports various of attachments, such as image, sketch, audio, video, location, etc.<br />- Supports text decorations: Bold, italic, underscore, strike through, highlight.<br />- Support insert elements: link, checkbox, ordered list, unordered list, date and time, quote block, code block.<br />- Folding and unfolding for sections.<br />- Move sections freely in or between documents.<br />- Outline.<br /><br />* Capture ideas<br />- Capture materials from any app that can share image, text, link, audio, video, or capture your idea with these forms by your self.<br />- Manage ideas and delegate to any destination.<br />- Choose and insert into document while editing.<br /><br />* Planning<br />- Automatically create tasks based on contents.<br />- Pick up from where you left last time directly from agenda.<br />- Status, priority, tags, automatically categorize by status, tags, schedule date, due date, etc.<br /><br />* Document management<br />- Any depth of level of sub documents.<br />- Organize them and move around freely. <br />- Note only the documents, but also the contents, can be moved around everywhere easily.<br /><br />* iCloud sync<br />- Automatically sync to your iCloud account, keep your data safe, and keep all devices the same.<br /><br />* Export to other forms<br />- HTML, txt, image, PDF, Markdown.<br /><br />* And more to come.<br /><br />More information about x3 note please visit http://forum.x3note.site.<br /><br />----<br /><br />Privacy policy: https://forum.x3note.site/t/32<br />Terms of service: https://www.apple.com/legal/internet-services/itunes/dev/stdeula/<br />
+                  Some people are different, they are curious, creative, always have fresh ideas, they don't think like others do, they don't see the world the same way as everybody does, they can feel what other people can't, to them the world is bigger, the sky is deeper, there are so much for them to explore, to share to others, to help people with their remarkable works, show them what the world can be, and how colorful life can be, they change the world for the better, you might be one of them.<br /><br />X3 is a note, which combines note taking, planning, and idea capturing together, with a mark-up syntax text based editor, supports various types of attachments, folding/unfoding paragraphs; use status, date and time to track tasks directly from text, and share anything that can be added as attachment from any app to X3 as editing resource.<br /><br />* Editor<br />- Minimal design let you focusing on writing.<br />- Lightweight markup launguage based rich text editor, supports various of attachments, such as image, sketch, audio, video, location, etc.<br />- Supports text decorations: Bold, italic, underscore, strike through, highlight.<br />- Support insert elements: link, checkbox, ordered list, unordered list, date and time, quote block, code block.<br />- Folding and unfolding for sections.<br />- Move sections freely in or between documents.<br />- Outline.<br /><br />* Capture ideas<br />- Capture materials from any app that can share image, text, link, audio, video, or capture your idea with these forms by your self.<br />- Manage ideas and delegate to any destination.<br />- Choose and insert into document while editing.<br /><br />* Planning<br />- Automatically create tasks based on contents.<br />- Pick up from where you left last time directly from agenda.<br />- Status, priority, tags, automatically categorize by status, tags, schedule date, due date, etc.<br /><br />* Document management<br />- Any depth of level of sub documents.<br />- Organize them and move around freely. <br />- Note only the documents, but also the contents, can be moved around everywhere easily.<br /><br />* iCloud sync<br />- Automatically sync to your iCloud account, keep your data safe, and keep all devices the same.<br /><br />* Export to other forms<br />- HTML, txt, image, PDF, Markdown.<br /><br />* And more to come.<br /><br />More information about x3 note please visit http://forum.x3note.site.<br /><br />----<br /><br />Privacy policy: https://forum.x3note.site/t/32<br />Terms of service: https://www.apple.com/legal/internet-services/itunes/dev/stdeula/<br />twitter: @x3note<br />
                </div>
           </div>
         
@@ -231,7 +231,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. macOS version is released, now everything including documents, ideas and attachments will all be synced across iPhone, iPad and macOS version<br /><br />2. Fix some issues
+              * New feature<br />- Link to other document<br />- Adding link now bring the selected text as default title<br />- Now creating blocks, will bring selected text into them<br />- Now picking image is able to add from files<br />* Bug fix and improvments<br />- Sometimes the file can not be deleted<br />- Renaming and deleting file now will update the macOS version tabs correctly<br />- Fix unneeded reload request whe writing<br />- Fix the confirm UI layout<br />- Fix the UI for creating link<br />- Fix some animation glich
           </div>
         
 
@@ -283,8 +283,8 @@
             
             
               <div class="app-url-descr">
-                marketing_url: <a target="_blank" class="app-url" href="https://forum.x3note.site/
-">https://forum.x3note.site/
+                marketing_url: <a target="_blank" class="app-url" href="https://forum.x3note.site/t/welcome-to-x3-note/47
+">https://forum.x3note.site/t/welcome-to-x3-note/47
 </a>
               </div>
             
@@ -350,7 +350,7 @@
           <div class="app-description">
                <div class="cat-headline">Description</div>
                <div class="app-description-text">
-                  有些人总是与众不同，他们充满好奇，富有创造力，永远充满新鲜的点子，他们的思路新颖奇特，感官敏锐，在他们看来，世界更加广大，天空更加深邃，他们总是不断踏上新的旅程去探索，去分享，通过他们的创造去帮助其他人，传递他们对世界的独特感受，告诉人们世界其实更大，生活可以更多彩，他们把世界变得更美好。你也许就是他们中的一员。<br /><br />X3 笔记是让你成为专家的有力武器。<br /><br />* 编辑器<br />- 最少化设计，减少写作干扰。<br />- 基于轻量标记语言的富文本编辑器，支持多种附件，包括图片，涂鸦，音频，视频，位置等。<br />- 多种文字装饰，包括粗体，斜体，下划线，删除线，高亮。<br />- 多种可交互组件，包括超链接，复选框，列表，日期，引用块，代码块等。<br />- 段落折叠和展开。<br />- 段落自由移动和整理。<br />- 大纲。<br /><br />* 灵感采集<br />- 采集任意 App 分享，以及手动采集各种格式内容，图片，录音，视频，定位，文字等等。<br />- 集中管理灵感素材，统一进行分配。<br />- 在编辑中浏览和使用素材。<br /><br />* 日程管理<br />- 自动根据文档内容建立日程表。<br />- 通过日程表快速进入指定位置开始编辑。<br />- 状态，优先级，标签，日期时间，以及通过这些方式进行内容的分类和筛选。<br /><br />* 文档管理<br />- 任意层数子文件。<br />- 整理和自由移动文档。<br />- 文档内容也可以在文档内和文档之间自由移动。<br /><br />* iCloud 同步<br />- 自动同步到 iCloud 中，保持设变之间内容一致和安全。<br /><br />* 导出多种文件格式<br />- HTML，图片，PDF，Markdown，纯文本。<br /><br />* 更多功能正在开发中<br /><br />更多 x3 笔记的相关信息请访问 http://forum.x3note.site <br /><br />----<br /><br />隐私条款: https://forum.x3note.site/t/32<br />用户协议: https://www.apple.com/legal/internet-services/itunes/dev/stdeula/<br />
+                  有些人总是与众不同，他们充满好奇，富有创造力，永远充满新鲜的点子，他们的思路新颖奇特，感官敏锐，在他们看来，世界更加广大，天空更加深邃，他们总是不断踏上新的旅程去探索，去分享，通过他们的创造去帮助其他人，传递他们对世界的独特感受，告诉人们世界其实更大，生活可以更多彩，他们把世界变得更美好。你也许就是他们中的一员。<br /><br />X3 笔记本，深度结合编辑器，任务管理，和灵感捕捉在一起。基于文本的，采用 mark-up 语法的编辑器，支持多种类型的附件和段落折叠；使用状态，时间，直接使用文本内容追踪任务；通过分享从任意应用抓取内容作为 x3 笔记的素材资源。<br /><br />* 编辑器<br />- 最少化设计，减少写作干扰。<br />- 基于轻量标记语言的富文本编辑器，支持多种附件，包括图片，涂鸦，音频，视频，位置等。<br />- 多种文字装饰，包括粗体，斜体，下划线，删除线，高亮。<br />- 多种可交互组件，包括超链接，复选框，列表，日期，引用块，代码块等。<br />- 段落折叠和展开。<br />- 段落自由移动和整理。<br />- 大纲。<br /><br />* 灵感采集<br />- 采集任意 App 分享，以及手动采集各种格式内容，图片，录音，视频，定位，文字等等。<br />- 集中管理灵感素材，统一进行分配。<br />- 在编辑中浏览和使用素材。<br /><br />* 日程管理<br />- 自动根据文档内容建立日程表。<br />- 通过日程表快速进入指定位置开始编辑。<br />- 状态，优先级，标签，日期时间，以及通过这些方式进行内容的分类和筛选。<br /><br />* 文档管理<br />- 任意层数子文件。<br />- 整理和自由移动文档。<br />- 文档内容也可以在文档内和文档之间自由移动。<br /><br />* iCloud 同步<br />- 自动同步到 iCloud 中，保持设变之间内容一致和安全。<br /><br />* 导出多种文件格式<br />- HTML，图片，PDF，Markdown，纯文本。<br /><br />* 更多功能正在开发中<br /><br />更多 x3 笔记的相关信息请访问 http://forum.x3note.site <br /><br />----<br /><br />隐私条款: https://forum.x3note.site/t/32<br />用户协议: https://www.apple.com/legal/internet-services/itunes/dev/stdeula/<br />
                </div>
           </div>
         
@@ -358,7 +358,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. macOS 已发布，现在可以通过 iCloud 在 iPhone， iPad， Mac 之间免费同步所有内容，包括文档，灵感，附件等内容。<br />2. 修复一些小问题。
+              * 新功能<br />- 新增文档链接<br />- 现在支持从文档中选择图片作为附件<br />- 添加链接时现在可以自动将选择的文字作为默认标题<br />- 创建块时，现在会自动将选中的文字移动到块中<br />* 修复和优化<br />- 修复有些文档无法删除的问题<br />- 修复重命名和删除文档时，macOS 版的 tab 不能更新<br />- 修复有时候会有太多重新加载文档的提示<br />- 修复确认提示对话框的显示问题<br />- 修复创建链接界面的显示问题<br />- 修复一些动画问题
           </div>
         
 
