@@ -1,1 +1,1 @@
-https://forum.x3note.site/
+https://forum.x3note.site/t/welcome-to-x3-note/47
