@@ -1,2 +1,12 @@
-1. macOS 已发布，现在可以通过 iCloud 在 iPhone， iPad， Mac 之间免费同步所有内容，包括文档，灵感，附件等内容。
-2. 修复一些小问题。
+* 新功能
+- 新增文档链接
+- 现在支持从文档中选择图片作为附件
+- 添加链接时现在可以自动将选择的文字作为默认标题
+- 创建块时，现在会自动将选中的文字移动到块中
+* 修复和优化
+- 修复有些文档无法删除的问题
+- 修复重命名和删除文档时，macOS 版的 tab 不能更新
+- 修复有时候会有太多重新加载文档的提示
+- 修复确认提示对话框的显示问题
+- 修复创建链接界面的显示问题
+- 修复一些动画问题
